ws_lidar/log/build_2025-01-30_23-17-06/object_avoidance/stderr.log
  File "/home/cewan/ws_lidar/install/object_avoidance/lib/python3.10/site-packages/object_avoidance/object_avoidance_subscriber.py", line 123
    self.motor.setMotorModel((pwm1, pwm2, pwm3, pwm4)
                            ^
SyntaxError: '(' was never closed

